--- a/.github/workflows/ex-workflow.yml
+++ b/.github/workflows/ex-workflow.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.9
+          python-version: '3.10'
 
       - name: Install Python packages
         working-directory: etc
@@ -67,7 +67,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.9
+          python-version: '3.10'
 
       - name: Install Python packages
         working-directory: modflow6-examples/etc
@@ -119,7 +119,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: [3.9, "3.10", "3.11", "3.12"]
+        python: ["3.10", "3.11", "3.12", "3.13"]
     steps:
       - name: Checkout MODFLOW 6 examples
         uses: actions/checkout@v4
@@ -186,21 +186,21 @@ jobs:
 
       - name: Run postprocessing
         working-directory: modflow6-examples/scripts
-        if: matrix.python == '3.9'
+        if: matrix.python == '3.10'
         run: python process-scripts.py
 
       - name: Build PDF document
         working-directory: modflow6-examples/doc
-        if: matrix.python == '3.9'
+        if: matrix.python == '3.10'
         run: ./build-pdf.sh
 
       - name: Move PDF document
         working-directory: modflow6-examples
-        if: matrix.python == '3.9'
+        if: matrix.python == '3.10'
         run: mv doc/${{ env.DISTNAME }}.pdf ${{ env.DISTNAME }}.pdf
 
       - name: Upload PDF document
-        if: matrix.python == '3.9'
+        if: matrix.python == '3.10'
         uses: actions/upload-artifact@v4
         with:
           name: ${{ env.DISTNAME}}.pdf
