--- a/.codespellrc
+++ b/.codespellrc
@@ -1,3 +1,3 @@
 [codespell]
-skip = ./examples,*.list,*.log,*.fem,*.grb,*.png,*.jpg,*.tif
+skip = ./examples,./data/ex-gwt-phreeqcrm/phreeqc.dat, *.list,*.log,*.fem,*.grb,*.png,*.jpg,*.tif
 ignore-words = etc/codespell.ignore
