--- a/.doc/requirements.rtd.txt
+++ b/.doc/requirements.rtd.txt
@@ -1,3 +1,4 @@
+sphinx>=4
 nbconvert==7.16.3
 nbsphinx
 nbsphinx_link
@@ -5,6 +6,6 @@ ipython
 ipykernel
 rtds_action
 sphinx_markdown_tables
-sphinx-rtd-theme
+sphinx-rtd-theme>=1
 pygments>=2.4.1
 myst-parser
