--- a/.github/workflows/ex-workflow.yml
+++ b/.github/workflows/ex-workflow.yml
@@ -22,21 +22,20 @@ jobs:
     name: Lint/format example scripts
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    defaults:
+      run:
+        shell: bash -el {0}
     steps:
       - name: Checkout MODFLOW 6 examples
         uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - name: Setup Micromamba
+        uses: mamba-org/setup-micromamba@v2
         with:
-          python-version: '3.10'
-
-      - name: Install Python packages
-        working-directory: etc
-        run: |
-          python --version
-          python -m pip install --upgrade pip setuptools wheel
-          pip install -r requirements.pip.txt
+          environment-file: environment.yml
+          cache-downloads: true
+          cache-environment: true
+          init-shell: bash
 
       - name: Lint
         run: ruff check .
@@ -52,6 +51,9 @@ jobs:
     name: Build example models
     runs-on: ubuntu-latest
     needs: lint
+    defaults:
+      run:
+        shell: bash -el {0}
     steps:
       - name: Checkout MODFLOW6 examples
         uses: actions/checkout@v4
@@ -64,18 +66,16 @@ jobs:
           repository: MODFLOW-ORG/modflow6
           path: modflow6
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - name: Setup Micromamba
+        uses: mamba-org/setup-micromamba@v2
         with:
-          python-version: '3.10'
+          environment-file: modflow6-examples/environment.yml
+          cache-downloads: true
+          cache-environment: true
+          init-shell: bash
 
-      - name: Install Python packages
-        working-directory: modflow6-examples/etc
-        run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install -r requirements.pip.txt
-          pip install -r requirements.usgs.txt
-          python -m ipykernel install --name python_kernel --user
+      - name: Create Jupyter kernel
+        run: python -m ipykernel install --name python_kernel --user
 
       - name: Update FloPy classes
         run: python -m flopy.mf6.utils.generate_classes --ref develop --no-backup
@@ -116,10 +116,9 @@ jobs:
     name: Run examples, make docs
     runs-on: ubuntu-latest
     needs: lint
-    strategy:
-      fail-fast: false
-      matrix:
-        python: ["3.10", "3.11", "3.12", "3.13"]
+    defaults:
+      run:
+        shell: bash -el {0}
     steps:
       - name: Checkout MODFLOW 6 examples
         uses: actions/checkout@v4
@@ -147,21 +146,19 @@ jobs:
         working-directory: usgslatex/usgsLaTeX
         run: sudo ./install.sh --all-users
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - name: Setup Micromamba
+        uses: mamba-org/setup-micromamba@v2
         with:
-          python-version: ${{ matrix.python }}
+          environment-file: modflow6-examples/environment.yml
+          cache-downloads: true
+          cache-environment: true
+          init-shell: bash
 
       - name: Set up headless display
         uses: pyvista/setup-headless-display-action@v4
 
-      - name: Install Python packages
-        working-directory: modflow6-examples/etc
-        run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install -r requirements.pip.txt
-          pip install -r requirements.usgs.txt
-          python -m ipykernel install --name python_kernel --user
+      - name: Create Jupyter kernel
+        run: python -m ipykernel install --name python_kernel --user
 
       - name: Update FloPy classes
         run: python -m flopy.mf6.utils.generate_classes --ref develop --no-backup
@@ -186,21 +183,17 @@ jobs:
 
       - name: Run postprocessing
         working-directory: modflow6-examples/scripts
-        if: matrix.python == '3.10'
         run: python process-scripts.py
 
       - name: Build PDF document
         working-directory: modflow6-examples/doc
-        if: matrix.python == '3.10'
         run: ./build-pdf.sh
 
       - name: Move PDF document
         working-directory: modflow6-examples
-        if: matrix.python == '3.10'
         run: mv doc/${{ env.DISTNAME }}.pdf ${{ env.DISTNAME }}.pdf
 
       - name: Upload PDF document
-        if: matrix.python == '3.10'
         uses: actions/upload-artifact@v4
         with:
           name: ${{ env.DISTNAME}}.pdf
