--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,30 +1,13 @@
 # .readthedocs.yml
 # Read the Docs configuration file
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
-
-# Required
 version: 2
-
-# Set the version of Python and other tools you might need
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.11"
-
-# Build documentation in the docs/ directory with Sphinx
+    python: "mambaforge-22.9"
 sphinx:
   configuration: .doc/conf.py
-
-# Build documentation with MkDocs
-#mkdocs:
-#  configuration: mkdocs.yml
-
-# Optionally build your docs in additional formats such as PDF and ePub
 formats: []
-
-# Optionally set the version of Python and requirements required to build your docs
-python:
-  install:
-    - requirements: etc/requirements.pip.txt
-    - requirements: etc/requirements.usgs.txt
-    - requirements: .doc/requirements.rtd.txt
+conda:
+  environment: environment.yml
