chore: install rtd deps from pypi (#277)
Switching to the conda environment broke the description pages in the RTD site. Try installing RTD deps from PyPI instead

--- a/.github/workflows/ex-workflow.yml
+++ b/.github/workflows/ex-workflow.yml
@@ -119,6 +119,8 @@ jobs:
     defaults:
       run:
         shell: bash -el {0}
+    env:
+      MPLBACKEND: agg
     steps:
       - name: Checkout MODFLOW 6 examples
         uses: actions/checkout@v4
