--- a/.github/workflows/ex-workflow.yml
+++ b/.github/workflows/ex-workflow.yml
@@ -185,7 +185,7 @@ jobs:
 
       - name: Run postprocessing
         working-directory: modflow6-examples/scripts
-        run: python process-scripts.py
+        run: python create-doc-tables.py
 
       - name: Build PDF document
         working-directory: modflow6-examples/doc
