--- a/ruff.toml
+++ b/ruff.toml
@@ -18,4 +18,5 @@ ignore = [
     "F841", # local variable assigned but never used
     "RUF005", # collection literal concatenation
     "UP015", # redundant open modes
+    "RUF059", # unpacked variable is never used
 ]
