refactor (python): apply ruff check rules C4, a few preview rules (#303)
Apply ruff's [flake8-comprehensions (C4)](https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4) rule, and also apply a few "preview" fixes thru ruff 0.14.7. The statistics of checks before this PR are:

$ pixi run ruff check --statistics --preview
26	RUF031  [*] incorrectly-parenthesized-tuple-in-subscript
20	C408  	[ ] unnecessary-collection-call
 6	RUF039	[ ] unraw-re-pattern
 4	C409  	[ ] unnecessary-literal-within-tuple-call
 4	C416  	[ ] unnecessary-comprehension
 4	C419  	[ ] unnecessary-comprehension-in-call
 4	C420  	[*] unnecessary-dict-comprehension-for-iterable
 3	C414  	[ ] unnecessary-double-cast-or-process
 2	RUF027	[ ] missing-f-string-syntax
 1	C403  	[ ] unnecessary-list-comprehension-set
 1	E262  	[*] no-space-after-inline-comment
Found 75 errors.
[*] 31 fixable with the `--fix` option (38 hidden fixes can be enabled with the `--unsafe-fixes` option).

Fixes were mostly automated, with a few manual fixes.

--- a/ruff.toml
+++ b/ruff.toml
@@ -3,6 +3,7 @@ target-version = "py310"
 
 [lint]
 select = [
+    "C4",   # flake8 comprehensions
     "D409", # pydocstyle - section-underline-matches-section-length
     "E",    # pycodestyle error
     "F",    # Pyflakes
